--- a/TikiProfilesTester.Rmd
+++ b/TikiProfilesTester.Rmd
@@ -15,6 +15,8 @@ source("http://bioconductor.org/biocLite.R")
 #install.packages("readr") # you only need to do this one time on your system
 #install.packages("data.table")
 #install.packages("R.utils")
+#require(devtools)
+#install_github('rCharts', 'ramnathv')
 require(readr)
 require(GUIProfiler)
 require(data.table)
@@ -59,7 +61,7 @@ outputFilename <- ""
 error <- list()
 notices <- list()
 warnings <- list()
-error.idx <- ""
+error.idx <- list()
 notices.idx <- ""
 warnings.idx <- ""
 N.Errors <- ""
@@ -72,46 +74,57 @@ profilesResults <- ""
 Versions <- c("12.x", "14.x", "trunk")
 rm(profilesList)
 # make log folder if missing
-if (!dir.exists(file.path(getwd(), "log"))) {
-  dir.create(file.path(getwd(), "log"))
+if (!dir.exists(file.path(getwd(), "log", format(Sys.Date(), "%y%m%d")))) {
+  dir.create(file.path(getwd(), "log", format(Sys.Date(), "%y%m%d")), recursive=T)
 }
-if (!dir.exists(file.path(getwd(), "results"))) {
-  dir.create(file.path(getwd(), "results"))
+if (!dir.exists(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d")))) {
+  dir.create(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d")), recursive=T)
 }
 profilesList <- fread("Tiki12_Profiles_List.csv", stringsAsFactors=FALSE, data.table=FALSE)
+
 profilesResults <- cbind(Version, Revision, N, profilesList, N.Errors,
-                      N.Notices, N.Warnings, stringsAsFactors=FALSE)
+                      N.Notices, N.Warnings, stringsAsFactors=FALSE)  
+
 #RRprofStart()
 for (vv in 1:length(Versions)) {
   cat(paste0("\n* Version: ", Versions[vv], " -------------------------------------- \n"))
   Revision <- system(paste0("cd /var/www/html/", Versions[vv],";svn info | grep Revision"), intern=TRUE)
   Revision <- sub("Revision: ", "r", Revision, fixed=T)
 
-#  for (ii in 1:dim(profilesList)[1]) { # ii counter of profile ID number
-    for (ii in 1:2) {
+  for (ii in 1:dim(profilesList)[1]) { # ii counter of profile ID number
+#    for (ii in 1:2) {
     #vv <- 1;ii <- 1;
   cat(paste0("\n** Profile (", ii, "/", dim(profilesList)[1],"): ", profilesList[ii,2], "\n"))
   
     # read all profile
     outputFilename[ii] <- paste0(Versions[vv], "_", format(Sys.Date(), "%y%m%d"), "_p", sprintf("%02d", ii), "_output_", profilesList[ii,2], ".txt")
-      command <- paste0("cd /var/www/html/", Versions[vv], "/;php console.php d:i --force;php console.php cache:clear --all;php console.php profile:apply ", profilesList[ii,2], " > \"", file.path(getwd(), "log", outputFilename[ii]), "\" 2>&1")
+      command <- paste0("cd /var/www/html/", Versions[vv], "/;php console.php d:i --force > \"", file.path(getwd(), "log", outputFilename[ii]), "\" 2>&1 ;php console.php cache:clear --all >> \"", file.path(getwd(), "log", outputFilename[ii]), "\" 2>&1;php console.php profile:apply ", profilesList[ii,2], " >> \"", file.path(getwd(), "log", outputFilename[ii]), "\" 2>&1")
       system(command)  
     output[[ii]] <- read_file(file.path(getwd(), "log", outputFilename[ii]))
     output.splitted[[ii]] <- splitByPattern(output[[ii]], "\n")
-    error.idx <- grep("error", output.splitted[[ii]], fixed=TRUE, value=F)
-    error[[ii]] <- output.splitted[[ii]][error.idx]
+    error.idx[[ii]] <- grep("error", output.splitted[[ii]], fixed=TRUE, value=F)
+    error[[ii]] <- output.splitted[[ii]][ error.idx[[ii]] ]
+    # Display errors in the R console output at least
+    cat(error[[ii]])
     notices.idx  <- grep("Notice", output.splitted[[ii]], fixed=TRUE, value=F)
     notices[[ii]] <- output.splitted[[ii]][notices.idx]
     warnings.idx  <- grep("Warning", output.splitted[[ii]], fixed=TRUE, value=F)
     warnings[[ii]] <- output.splitted[[ii]][warnings.idx]
-    profilesResults[ii,] <- c(Versions[vv], Revision, sprintf("%02d", ii), profilesList[ii,1:2], length(error[[ii]]),
-                                            length(notices[[ii]]), 
-                                            length(warnings[[ii]]) )
-  
-    
+    profilesResults[ii,] <- c(Versions[vv], 
+                               Revision, 
+                               sprintf("%02d", ii),
+                               profilesList[ii,1:2],
+                               length(error[[ii]]),
+                               length(notices[[ii]]),
+                               length(warnings[[ii]]) 
+                               )
+        if (length(error[[ii]]) > 0) {
+              cat(error[[ii]], file=file.path("results", format(Sys.Date(), "%y%m%d"), "errors_", Versions[vv], "_p", sprintf("%02d", ii),"__", profilesList[ii,2],".txt")))
+        }
+
     } # end of ii loop (profile ID)
   
-    write.csv(profilesResults, file.path("results", paste0(format(Sys.Date(), "%y%m%d_Tiki_"), Versions[vv], "_ProfilesResults.csv")), row.names=F)
+    write.csv(profilesResults, "results_", Versions[vv], ".csv")), row.names=F)
   
 } # end of loop for Tiki version
 #RRprofStop()
@@ -123,6 +136,30 @@ for (vv in 1:length(Versions)) {
 Check the output produced.
 
 ```{r, echo=TRUE}
+# Table file.path("results", format(Sys.Date(), "%y%m%d"),
+head(profilesResults)
+
+# Some bar chart
+require(rCharts)
+profilesResults.all <- list()
+results.files <- list.files(file.path("results", format(Sys.Date(), "%y%m%d")), pattern="results", ignore.case=T)
+if (length(results.files) > 0 ) {
+  for (ff in 1:length(results.files)) {
+    profilesResults.all[[ff]] <- fread(file.path("results", format(Sys.Date(), "%y%m%d"), results.files[ff])) 
+    p.r <- rbindlist(profilesResults.all, use.names=T, fill=FALSE, idcol=NULL)
+    p.e <- subset(as.data.frame(p.r), N.Errors > 0)
+    p.n <- subset(as.data.frame(p.r), N.Notices > 0)
+    p.w <- subset(as.data.frame(p.r), N.Warnings > 0)
+
+#n1 <- nPlot(Freq ~ Hair, group = "Eye", data = hair_eye_male, type = "multiBarChart")
+#n1$save("chart.html")
+
+  }
+  
+}
+
+# Pending
+# GoogleVis chart?
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
