renamed errro_chart.html filename so that it shows up at the bottom (below all the other files with error info for each branch)

--- a/TikiProfilesTester.Rmd
+++ b/TikiProfilesTester.Rmd
@@ -187,7 +187,7 @@ profilesResults.all <- list()
     n1$chart(reduceXTicks = F)
     n1$xAxis(staggerLabels = F)
     n1$xAxis(rotateLabels=-90)
-    n1$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "errors_chart.html"), cdn = F)
+    n1$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "error_chart.html"), cdn = F)
 
 p.r$N <- as.numeric(p.r$N)
 p.r$N.Errors <- as.numeric(p.r$N.Errors)
