--- a/TikiProfilesTester.Rmd
+++ b/TikiProfilesTester.Rmd
@@ -29,9 +29,10 @@ if( any(!pBIOC %in% rownames(installed.packages())) ){
 
 # Names of packages to be installed from CRAN if not present yet in this machine
 pCRAN <- c("devtools",
-           "GUIProfiler".
+           "GUIProfiler",
            "readr",
            "data.table",
+           "tidyr",
            "R.utils")
 
 if (!require("DT")) {
@@ -54,6 +55,15 @@ if(!require(rCharts)) install_github('rCharts', 'ramnathv')
 packages <- c(pBIOC, pCRAN)
 for (ii in 1:length(packages)) {
   require(as.character(packages[ii]), character.only=TRUE)
+}
+
+```
+```{r load Rda if available, echo=T}
+my.rda.file <- paste0("my.rda")
+
+if (file.exists(file.path(getwd(), my.rda.file))) {
+    ## ----loadData------------------------------------------------------------
+    load(file=file.path(getwd(), my.rda.file))
 }
 
 ```
@@ -192,8 +202,9 @@ Check the output produced.
 results.files <- list.files(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d")), pattern="results", ignore.case=T)
 if (length(results.files) > 0 ) {
   for (ff in 1:length(results.files)) {
-    profilesResults.all[[ff]] <- fread(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), results.files[ff])) 
-    p.r <- rbindlist(profilesResults.all, use.names=T, fill=FALSE, idcol=NULL)
+      profilesResults.all[[ff]] <- fread(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), results.files[ff]), data.table=T) 
+    }
+    p.r <- rbindlist(profilesResults.all)
     p.e <- subset(as.data.frame(p.r), N.Errors > 0)
     p.n <- subset(as.data.frame(p.r), N.Notices > 0)
     p.w <- subset(as.data.frame(p.r), N.Warnings > 0)
@@ -203,19 +214,57 @@ if (length(results.files) > 0 ) {
     p.n
     p.w
     p.s
+    p.i <- rbind(p.e, p.n, p.w, p.s)
+  dim(p.i)
+  #base::duplicated(p.i)
+  p.i.u <- p.i[!base::duplicated(p.i),]
+  dim(p.i.u)
+  
+     p.r.t <- p.r %>% tidyr::gather(Issue, Freq, N.Errors:N.StrictsStd, na.rm = T)
+     #colnames(p.r.t)
+     #head(p.r.t[,5:length(colnames(p.r.t))]);tail(p.r.t[,5:length(colnames(p.r.t))]);
 
-#     require(tidyr)
-#     p.r.t <- p.r %>% tidyr::gather(Issue, Freq, N.Errors:N.StrictsStd, na.rm = T)
-#     p.r.t
     
 # Some bar chart
 require(rCharts)
 profilesResults.all <- list()
-    n1 <- nPlot(N.Errors ~ N, group = "Version", data = p.r, type = "multiBarChart")
+#    n1 <- nPlot(N.Errors ~ N, group = "Version", data = p.r, type = "multiBarChart")
+    n1 <- nPlot(N.Errors ~ ProfileName_12.x, group = "Version", data = p.r, type = "multiBarChart")
     n1$chart(reduceXTicks = F)
     n1$xAxis(staggerLabels = F)
     n1$xAxis(rotateLabels=-90)
-    n1$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "error_chart.html"), cdn = T)
+    n1$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "error_chart.html"), cdn = F)
+
+    # Split the tidied dataset by Tiki versions, so that we can plot also one chart per Version 
+    p.r.t$Version <- as.character(p.r.t$Version)
+    p.r.t.12x    <- subset(p.r.t, Version == "12.x")
+    p.r.t.14x    <- subset(p.r.t, Version == "14.x")
+    p.r.t.trunk  <- subset(p.r.t, Version == "trunk")
+
+    # First plot a chart with data from all versions analyzed
+    n2.all <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t, type = "multiBarChart")
+    n2.all$chart(reduceXTicks = F)
+    n2.all$xAxis(staggerLabels = F)
+    n2.all$xAxis(rotateLabels=-90)
+    n2.all$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_all.html"), cdn = F)
+
+    n2.12x <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t.12x, type = "multiBarChart")
+    n2.12x$chart(reduceXTicks = F)
+    n2.12x$xAxis(staggerLabels = F)
+    n2.12x$xAxis(rotateLabels=-90)
+    n2.12x$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tiki12x.html"), cdn = F)
+
+    n2.14x <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t.14x, type = "multiBarChart")
+    n2.14x$chart(reduceXTicks = F)
+    n2.14x$xAxis(staggerLabels = F)
+    n2.14x$xAxis(rotateLabels=-90)
+    n2.14x$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tiki14x.html"), cdn = F)
+
+    n2.trunk <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t.trunk, type = "multiBarChart")
+    n2.trunk$chart(reduceXTicks = F)
+    n2.trunk$xAxis(staggerLabels = F)
+    n2.trunk$xAxis(rotateLabels=-90)
+    n2.trunk$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tikitrunk.html"), cdn = F)
 
 p.r$N <- as.numeric(p.r$N)
 p.r$N.Errors <- as.numeric(p.r$N.Errors)
@@ -248,11 +297,9 @@ require(DT)
     saveWidget(dt, file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"),'error_summary.html'))
 
   # Save Rda to disk
-  my.rda.file <- paste0("my.rda")
-  save(profilesResults.all,
-     file=my.rda.file)
-
-  }
+  save(p.r,
+       p.r.t,
+       file=my.rda.file)
   
 }
 
