changed cdn to true so that html produced can be easily seen elsewhere with internet access

--- a/TikiProfilesTester.Rmd
+++ b/TikiProfilesTester.Rmd
@@ -239,7 +239,7 @@ profilesResults.all <- list()
     n1$chart(reduceXTicks = F)
     n1$xAxis(staggerLabels = F)
     n1$xAxis(rotateLabels=-90)
-    n1$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "error_chart.html"), cdn = F)
+    n1$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "error_chart.html"), cdn = T)
 
     # Split the tidied dataset by Tiki versions, so that we can plot also one chart per Version 
     p.r.t$Version <- as.character(p.r.t$Version)
@@ -253,31 +253,31 @@ profilesResults.all <- list()
     n2.all$chart(reduceXTicks = F)
     n2.all$xAxis(staggerLabels = F)
     n2.all$xAxis(rotateLabels=-90)
-    n2.all$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_all.html"), cdn = F)
+    n2.all$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_all.html"), cdn = T)
 
     n2.12x <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t.12x, type = "multiBarChart")
     n2.12x$chart(reduceXTicks = F)
     n2.12x$xAxis(staggerLabels = F)
     n2.12x$xAxis(rotateLabels=-90)
-    n2.12x$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tiki12x.html"), cdn = F)
+    n2.12x$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tiki12x.html"), cdn = T)
 
     n2.14x <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t.14x, type = "multiBarChart")
     n2.14x$chart(reduceXTicks = F)
     n2.14x$xAxis(staggerLabels = F)
     n2.14x$xAxis(rotateLabels=-90)
-    n2.14x$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tiki14x.html"), cdn = F)
+    n2.14x$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tiki14x.html"), cdn = T)
 
     n2.15x <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t.15x, type = "multiBarChart")
     n2.15x$chart(reduceXTicks = F)
     n2.15x$xAxis(staggerLabels = F)
     n2.15x$xAxis(rotateLabels=-90)
-    n2.15x$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tiki15x.html"), cdn = F)
+    n2.15x$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tiki15x.html"), cdn = T)
 
     n2.trunk <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t.trunk, type = "multiBarChart")
     n2.trunk$chart(reduceXTicks = F)
     n2.trunk$xAxis(staggerLabels = F)
     n2.trunk$xAxis(rotateLabels=-90)
-    n2.trunk$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tikitrunk.html"), cdn = F)
+    n2.trunk$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tikitrunk.html"), cdn = T)
 
 p.r$N <- as.numeric(p.r$N)
 p.r$N.Errors <- as.numeric(p.r$N.Errors)
