--- a/TikiProfilesTester.Rmd
+++ b/TikiProfilesTester.Rmd
@@ -14,64 +14,21 @@ When you click the **Knit** button a document will be generated that includes bo
 > purl(f, documentation = 0)  # extract R code only
 > purl(f, documentation = 2)  # also include documentation
 
+```{r}
+# Libraries needed
+if (!require(pacman)) install.packages("pacman"); require(pacman)
+p_load(knitr)
+p_load(devtools,
+       readr,
+       data.table,
+       tidyr,
+       foreach,
+       doParallel,
+       R.utils)
 
-```{rn Extract R code and save on disk, echo=T}
-library(knitr)
-purl("TikiProfilesTester.Rmd", documentation = 0)
-```
-
-```{r install and load required packages, echo=FALSE}
-#############################
-# Package dependencies
-#############################
-## ----librerias, eval=TRUE------------------------------------------------
-## Bioconductor
-installifnot <- function (pckgName){
-  if(!(require(pckgName, character.only=TRUE))){
-    source("http://Bioconductor.org/biocLite.R")
-    biocLite(pckgName)
-  }
-}
-# Names of packages to be installed from BIOCONDUCTOR if not present yet in this machine
-pBIOC <- c("Rgraphviz")
-
-if( any(!pBIOC %in% rownames(installed.packages())) ){
-  installifnot(pBIOC[!pBIOC %in% rownames(installed.packages())])
-}
-
-# Names of packages to be installed from CRAN if not present yet in this machine
-pCRAN <- c("devtools",
-           "GUIProfiler",
-           "readr",
-           "data.table",
-           "tidyr",
-           "foreach",
-           "doParallel",
-           "R.utils")
-
-if (!require("DT")) {
-  # install from CRAN
-  install.packages('DT', repos = 'http://cran.rstudio.com')
-}
-require('DT')
-
-if( any(!pCRAN %in% rownames(installed.packages())) ){
-  install.packages(pCRAN[!pCRAN %in% rownames(installed.packages())], repos = 'http://cran.rstudio.com')
-}
-
-#Load required libraries
-packages <- c(pBIOC, pCRAN)
-for (ii in 1:length(packages)) {
-  require(as.character(packages[ii]), character.only=TRUE)
-}
-
-if(!require(rCharts)) install_github('rCharts', 'ramnathv')
-#if(!require(plotly)) devtools::install_github("ropensci/plotly")
-#if(!require(Nozzle.R1)) install.packages( "Nozzle.R1", type="source" );
-# "Nozzle: a report generation toolkit for data analysis pipelines"
-# http://bioinformatics.oxfordjournals.org/content/early/2013/02/17/bioinformatics.btt085
 
 ```
+
 ```{r load Rda if available, echo=T}
 my.rda.file <- paste0("my.rda")
 
@@ -134,7 +91,7 @@ Version <- ""
 N <- ""
 profilesResults <- ""
 profilesResults.all <- list()
-Versions <- c("12.x", "14.x", "15.x", "16.x", "trunk")
+Versions <- c("18.x", "21.x", "trunk")
 Revision <- rep("", length(Versions))
 if (Sys.info()["nodename"]=="r.tiki.org") {
   basepath <- "/var/www/tikiprofiletests/"
@@ -154,21 +111,24 @@ if (!dir.exists(file.path(getwd(), "log", format(Sys.Date(), "%y%m%d")))) {
 if (!dir.exists(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d")))) {
   dir.create(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d")), recursive=T)
 }
-profilesList <- fread("Tiki12_Profiles_List.csv", stringsAsFactors=FALSE, data.table=FALSE) 
+profilesList <- fread("Tiki21_Profiles_List.csv", stringsAsFactors=FALSE, data.table=FALSE) 
+profilesList
+```
 
+```{r}
 #RRprofStart()
 for (vv in 1:length(Versions)) {
-  
+  # vv <- 1
   cat(paste0("\n* Version: ", Versions[vv], " -------------------------------------- \n"))
-  Revision_string <- system(paste0("cd ", basepath, Versions[vv],";svn info | grep Revision"), intern=TRUE)
-  Revision[vv] <- sub("Revision: ", "r", Revision_string, fixed=T)
+  Revision_string <- system(paste0("cd ", basepath, Versions[vv],";git rev-parse --short HEAD"), intern=TRUE)
+    Revision[vv] <- paste0("Revision: ", Revision_string)
   phpv <- unlist(strsplit(system(paste0("php -v"), intern=TRUE)[1], "-"))[1]
   
   profilesResults <- cbind(Versions[vv], 
                          Revision[vv], 
                          phpv, 
+                         test_date=Sys.Date(),
                          N, 
-                         profilesList["ProfileCategory"],
                          profilesList[paste0("ProfileName_", Versions[vv])],
                          N.Errors,
                          N.Notices,
@@ -176,7 +136,7 @@ for (vv in 1:length(Versions)) {
                          N.StrictsStd,
                          stringsAsFactors=FALSE
                          ) 
-  
+
   for (ii in 1:dim(profilesList)[1]) { # ii counter of profile ID number
 #    for (ii in 1:2) {
     #vv <- 1;ii <- 1;
@@ -184,7 +144,7 @@ for (vv in 1:length(Versions)) {
   
     # read all profile
     outputFilename[ii] <- paste0(Versions[vv], "_", format(Sys.Date(), "%y%m%d"), "_p", sprintf("%02d", ii), "_output_", profilesList[ii,paste0("ProfileName_", Versions[vv])], ".txt")
-      command <- paste0("cd ", basepath, Versions[vv], "/;php console.php d:i --force > \"", file.path(getwd(), "log", format(Sys.Date(), "%y%m%d"), outputFilename[ii]), "\" 2>&1 ;php console.php cache:clear --all >> \"", file.path(getwd(), "log", format(Sys.Date(), "%y%m%d"), outputFilename[ii]), "\" 2>&1;php console.php profile:apply NextRepo;php console.php profile:apply ", profilesList[ii,paste0("ProfileName_", Versions[vv])], " >> \"", file.path(getwd(), "log", format(Sys.Date(), "%y%m%d"), outputFilename[ii]), "\" 2>&1")
+      command <- paste0("cd ", basepath, Versions[vv], "/;php console.php d:i --force > \"", file.path(getwd(), "log", format(Sys.Date(), "%y%m%d"), outputFilename[ii]), "\" 2>&1 ;php console.php cache:clear --all >> \"", file.path(getwd(), "log", format(Sys.Date(), "%y%m%d"), outputFilename[ii]), "\" 2>&1;php console.php profile:apply NextRepo;php console.php profile:apply \"", profilesList[ii,paste0("ProfileName_", Versions[vv])], "\" >> \"", file.path(getwd(), "log", format(Sys.Date(), "%y%m%d"), gsub(")", "_", gsub("(", "_", outputFilename[ii], fixed=TRUE), fixed=TRUE)), "\" 2>&1")
       system(command)  
     output[[ii]] <- read_file(file.path(getwd(), "log", format(Sys.Date(), "%y%m%d"), outputFilename[ii]))
     output.splitted[[ii]] <- splitByPattern(output[[ii]], "\n")
@@ -199,15 +159,15 @@ for (vv in 1:length(Versions)) {
     stricstd.idx  <- grep("Strict Standards", output.splitted[[ii]], fixed=TRUE, value=F)
     stricstd[[ii]] <- output.splitted[[ii]][stricstd.idx]
     profilesResults[ii,] <- c(Versions[vv], 
-                               Revision[vv], 
-                               phpv,
-                               sprintf("%02d", ii),
-                               profilesList[ii,1],
-                               profilesList[ii, paste0("ProfileName_", Versions[vv])],
-                               length(error[[ii]]),
-                               length(notices[[ii]]),
-                               length(warnings[[ii]]),
-                               length(stricstd[[ii]])
+                              Revision[vv], 
+                              phpv,
+                              as.character(Sys.Date()),
+                              sprintf("%02d", ii),
+                              profilesList[ii, paste0("ProfileName_", Versions[vv])],
+                              length(error[[ii]]),
+                              length(notices[[ii]]),
+                              length(warnings[[ii]]),
+                              length(stricstd[[ii]])
                               )
         if (length(error[[ii]]) > 0) {
               cat(error[[ii]], file=file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), paste0("errors_", Versions[vv], "_p", sprintf("%02d", ii),"__", profilesList[ii,paste0("ProfileName_", Versions[vv])],".txt")))
@@ -371,3 +331,8 @@ replaceResult <- foreach (ff = 1:length(filenames)) %dopar% {
 }
 ```
 
+
+
+```{rn Extract R code and save on disk, echo=T}
+purl("TikiProfilesTester.Rmd", documentation = 0)
+```
