--- a/TikiProfilesTester.Rmd
+++ b/TikiProfilesTester.Rmd
@@ -157,10 +157,12 @@ for (vv in 1:length(Versions)) {
 
 Check the output produced.
 
-```{r output, echo=TRUE}
-results.files <- list.files(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d")), pattern="results", ignore.case=T)
-if (length(results.files) > 0 ) {
-  for (ff in 1:length(results.files)) {
+```{r output, eval=FALSE, include=FALSE}
+if (F) {
+  
+  results.files <- list.files(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d")), pattern="results", ignore.case=T)
+  if (length(results.files) > 0 ) {
+    for (ff in 1:length(results.files)) {
       profilesResults.all[[ff]] <- fread(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), results.files[ff]), data.table=T) 
     }
     p.r <- rbindlist(profilesResults.all)
@@ -174,26 +176,27 @@ if (length(results.files) > 0 ) {
     p.w
     p.s
     p.i <- rbind(p.e, p.n, p.w, p.s)
-  dim(p.i)
-  #base::duplicated(p.i)
-  p.i.u <- p.i[!base::duplicated(p.i),]
-  dim(p.i.u)
-  
-     p.r.t <- p.r %>% tidyr::gather(Issue, Freq, N.Errors:N.StrictsStd, na.rm = T)
-     #colnames(p.r.t)
-     #head(p.r.t[,5:length(colnames(p.r.t))]);tail(p.r.t[,5:length(colnames(p.r.t))]);
-
+    dim(p.i)
+    #base::duplicated(p.i)
+    p.i.u <- p.i[!base::duplicated(p.i),]
+    dim(p.i.u)
     
-# Some bar chart
-require(rCharts)
-profilesResults.all <- list()
-#    n1 <- nPlot(N.Errors ~ N, group = "Version", data = p.r, type = "multiBarChart")
+    p.r.t <- p.r %>% tidyr::gather(Issue, Freq, N.Errors:N.StrictsStd, na.rm = T)
+    #colnames(p.r.t)
+    #head(p.r.t[,5:length(colnames(p.r.t))]);tail(p.r.t[,5:length(colnames(p.r.t))]);
+    
+    
+    
+    # Some bar chart
+    require(rCharts)
+    profilesResults.all <- list()
+    #    n1 <- nPlot(N.Errors ~ N, group = "Version", data = p.r, type = "multiBarChart")
     n1 <- nPlot(N.Errors ~ ProfileName_12.x, group = "Version", data = p.r, type = "multiBarChart")
     n1$chart(reduceXTicks = F)
     n1$xAxis(staggerLabels = F)
     n1$xAxis(rotateLabels=-90)
     n1$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "error_chart.html"), cdn = T)
-
+    
     # Split the tidied dataset by Tiki versions, so that we can plot also one chart per Version 
     p.r.t$Version <- as.character(p.r.t$Version)
     p.r.t.12x    <- subset(p.r.t, Version == "12.x")
@@ -201,32 +204,32 @@ profilesResults.all <- list()
     p.r.t.15x    <- subset(p.r.t, Version == "15.x")
     p.r.t.16x    <- subset(p.r.t, Version == "16.x")
     p.r.t.trunk  <- subset(p.r.t, Version == "trunk")
-
+    
     # First plot a chart with data from all versions analyzed
     n2.all <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t, type = "multiBarChart")
     n2.all$chart(reduceXTicks = F)
     n2.all$xAxis(staggerLabels = F)
     n2.all$xAxis(rotateLabels=-90)
     n2.all$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_all.html"), cdn = T)
-
+    
     n2.12x <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t.12x, type = "multiBarChart")
     n2.12x$chart(reduceXTicks = F)
     n2.12x$xAxis(staggerLabels = F)
     n2.12x$xAxis(rotateLabels=-90)
     n2.12x$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tiki12x.html"), cdn = T)
-
+    
     n2.14x <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t.14x, type = "multiBarChart")
     n2.14x$chart(reduceXTicks = F)
     n2.14x$xAxis(staggerLabels = F)
     n2.14x$xAxis(rotateLabels=-90)
     n2.14x$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tiki14x.html"), cdn = T)
-
+    
     n2.15x <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t.15x, type = "multiBarChart")
     n2.15x$chart(reduceXTicks = F)
     n2.15x$xAxis(staggerLabels = F)
     n2.15x$xAxis(rotateLabels=-90)
     n2.15x$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tiki15x.html"), cdn = T)
-
+    
     n2.16x <- nPlot(Freq ~ ProfileName_12.x, group = "Issue", data = p.r.t.16x, type = "multiBarChart")
     n2.16x$chart(reduceXTicks = F)
     n2.16x$xAxis(staggerLabels = F)
@@ -238,42 +241,43 @@ profilesResults.all <- list()
     n2.trunk$xAxis(staggerLabels = F)
     n2.trunk$xAxis(rotateLabels=-90)
     n2.trunk$save(file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"), "issue_chart_tikitrunk.html"), cdn = T)
-
-p.r$N <- as.numeric(p.r$N)
-p.r$N.Errors <- as.numeric(p.r$N.Errors)
-p.r$N.Notices <- as.numeric(p.r$N.Notices)
-p.r$N.Warnings <- as.numeric(p.r$N.Warnings)
-p.r$N.StrictsStd <- as.numeric(p.r$N.StrictsStd)
-require(DT)
+    
+    p.r$N <- as.numeric(p.r$N)
+    p.r$N.Errors <- as.numeric(p.r$N.Errors)
+    p.r$N.Notices <- as.numeric(p.r$N.Notices)
+    p.r$N.Warnings <- as.numeric(p.r$N.Warnings)
+    p.r$N.StrictsStd <- as.numeric(p.r$N.StrictsStd)
+    require(DT)
     d = data.frame(
       p.r,
       stringsAsFactors = FALSE
     )
     dt <- datatable(d, filter = 'bottom', options = list(pageLength = 10)) %>%
-    formatStyle('N.Errors',  
-                color = styleInterval(c(0.5, 10), c('black', 'red', 'blue')),
-                backgroundColor = styleInterval(0.5, c('white', 'yellow')),
-                fontWeight = styleInterval(0.5, c('italics', 'bold'))) %>%
-    formatStyle('N.Notices',  
-                color = styleInterval(c(2, 5, 10), c('blue', 'red', 'green', 'brown')),
-                backgroundColor = styleInterval(c(2, 5, 25), c('white', 'snow', 'lightyellow', 'lightgrey'))) %>%
-    formatStyle('N.Warnings',
-                background = styleColorBar(p.r$N.Warnings, 'steelblue'),
-                backgroundSize = '100% 90%',
-                backgroundRepeat = 'no-repeat',
-                backgroundPosition = 'center'  ) %>%
-    formatStyle('N.StrictsStd',  
-                color = styleInterval(c(2, 5, 10), c('blue', 'red', 'green', 'brown')),
-                backgroundColor = styleInterval(c(2, 5, 25), c('white', 'lightgreen', 'green', 'lightgrey')))
-
- 
+      formatStyle('N.Errors',  
+                  color = styleInterval(c(0.5, 10), c('black', 'red', 'blue')),
+                  backgroundColor = styleInterval(0.5, c('white', 'yellow')),
+                  fontWeight = styleInterval(0.5, c('italics', 'bold'))) %>%
+      formatStyle('N.Notices',  
+                  color = styleInterval(c(2, 5, 10), c('blue', 'red', 'green', 'brown')),
+                  backgroundColor = styleInterval(c(2, 5, 25), c('white', 'snow', 'lightyellow', 'lightgrey'))) %>%
+      formatStyle('N.Warnings',
+                  background = styleColorBar(p.r$N.Warnings, 'steelblue'),
+                  backgroundSize = '100% 90%',
+                  backgroundRepeat = 'no-repeat',
+                  backgroundPosition = 'center'  ) %>%
+      formatStyle('N.StrictsStd',  
+                  color = styleInterval(c(2, 5, 10), c('blue', 'red', 'green', 'brown')),
+                  backgroundColor = styleInterval(c(2, 5, 25), c('white', 'lightgreen', 'green', 'lightgrey')))
+    
+    
     saveWidget(dt, file.path(getwd(), "results", format(Sys.Date(), "%y%m%d"),'error_summary.html'))
-
-  # Save Rda to disk
-  save(p.r,
-       p.r.t,
-       file=my.rda.file)
-  
+    
+    # Save Rda to disk
+    save(p.r,
+         p.r.t,
+         file=my.rda.file)
+    
+  }
 }
 
 # Pending
@@ -285,21 +289,25 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 # fix paths to html in cdn
 
 ```{r fix paths to html in cdn}
-
-# ---------------------------
-getwd()
-resultsRelDir <- "results"
-filenames <- list.files(path = file.path(resultsRelDir, format(Sys.Date(), "%y%m%d")), pattern = "html")
-#setwd(resultsRelDir)
-## Replace wrong base path in src param
-#foreach( ff in filenames ){
-replaceResult <- foreach (ff = 1:length(filenames)) %dopar% {
-  #ff <- 1
-  xx <- readLines(file.path(resultsRelDir, format(Sys.Date(), "%y%m%d"), filenames[ff]))
-  yy <- gsub( "href=\'//", "href=\'http://", xx )
-  yy <- gsub( "src=\'//", "src=\'http://", xx )
-  cat(yy, file=file.path(resultsRelDir, format(Sys.Date(), "%y%m%d"), filenames[ff]), sep="\n")
+if (F) {
+  
+  # ---------------------------
+  getwd()
+  resultsRelDir <- "results"
+  filenames <- list.files(path = file.path(resultsRelDir, format(Sys.Date(), "%y%m%d")), pattern = "html")
+  #setwd(resultsRelDir)
+  ## Replace wrong base path in src param
+  #foreach( ff in filenames ){
+  replaceResult <- foreach (ff = 1:length(filenames)) %dopar% {
+    #ff <- 1
+    xx <- readLines(file.path(resultsRelDir, format(Sys.Date(), "%y%m%d"), filenames[ff]))
+    yy <- gsub( "href=\'//", "href=\'http://", xx )
+    yy <- gsub( "src=\'//", "src=\'http://", xx )
+    cat(yy, file=file.path(resultsRelDir, format(Sys.Date(), "%y%m%d"), filenames[ff]), sep="\n")
+  }
+  
 }
+
 ```
 
 
